check_errors.txt
warning: unused import: `VoxelChunk`
  --> astraweave-terrain\src\terrain_modifier.rs:20:32
   |
20 | use crate::{ChunkCoord, Voxel, VoxelChunk, VoxelGrid};
   |                                ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `HashMap`
  --> astraweave-terrain\src\terrain_modifier.rs:22:24
   |
22 | use std::collections::{HashMap, HashSet, VecDeque};
   |                        ^^^^^^^

warning: unused import: `std::f32::consts::PI`
   --> astraweave-materials\src\lib.rs:619:13
    |
619 |         use std::f32::consts::PI;
    |             ^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` on by default

warning: variable does not need to be mutable
   --> astraweave-materials\src\lib.rs:468:13
    |
468 |         let mut metallic_roughness = vec![[0.0f32, 0.5, 0.0, 1.0]; total_pixels];
    |             ----^^^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: `astraweave-terrain` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-terrain` to apply 2 suggestions)
warning: `astraweave-materials` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-materials` to apply 2 suggestions)
warning: variable does not need to be mutable
   --> astraweave-render\src\gpu_memory.rs:136:13
    |
136 |         let mut mgr = Self::new();
    |             ----^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: field `skinned_pipeline` is never read
   --> astraweave-render\src\renderer.rs:375:5
    |
284 | pub struct Renderer {
    |            -------- field in this struct
...
375 |     skinned_pipeline: wgpu::RenderPipeline,
    |     ^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: `astraweave-render` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-render` to apply 1 suggestion)
    Checking hello_companion v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\examples\hello_companion)
warning: unused import: `NpcDialogueState`
 --> examples\hello_companion\src\chat_ui.rs:5:30
  |
5 | use crate::scene::{DemoMode, NpcDialogueState};
  |                              ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Mat4` and `Quat`
 --> examples\hello_companion\src\scene.rs:9:12
  |
9 | use glam::{Mat4, Quat, Vec3};
  |            ^^^^  ^^^^

warning: unused import: `std::sync::Arc`
  --> examples\hello_companion\src\scene.rs:10:5
   |
10 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

warning: unused import: `wgpu::util::DeviceExt`
  --> examples\hello_companion\src\scene.rs:11:5
   |
11 | use wgpu::util::DeviceExt;
   |     ^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:155:29
    |
155 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:161:29
    |
161 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:167:29
    |
167 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:173:29
    |
173 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:197:29
    |
197 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
   --> examples\hello_companion\src\dialogue_bank.rs:204:29
    |
204 |         let mut rng = rand::thread_rng();
    |                             ^^^^^^^^^^

warning: unreachable statement
   --> examples\hello_companion\src\main.rs:187:5
    |
183 |         return visual_demo::run_visual_demo();
    |         ------------------------------------- any code following this expression is unreachable
...
187 |     println!("ΓòöΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòÉΓòù");
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
    |
    = note: `#[warn(unreachable_code)]` on by default
    = note: this warning originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `context` found for enum `std::result::Result` in the current scope
   --> examples\hello_companion\src\main.rs:908:45
    |
908 |     let rt = tokio::runtime::Runtime::new().context("Failed to create tokio runtime")?;
    |                                             ^^^^^^^
    |
    = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `context` are implemented but not in scope; perhaps you want to import one of them
    |
32  + use anyhow::Context;
    |
32  + use quick_error::ResultExt;
    |
32  + use winnow::parser::Parser;
    |
help: there is a method `with_context` with a similar name
    |
908 |     let rt = tokio::runtime::Runtime::new().with_context("Failed to create tokio runtime")?;
    |                                             +++++

error[E0599]: no method named `context` found for enum `std::result::Result` in the current scope
   --> examples\hello_companion\src\main.rs:930:45
    |
930 |     let rt = tokio::runtime::Runtime::new().context("Failed to create tokio runtime")?;
    |                                             ^^^^^^^
    |
    = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `context` are implemented but not in scope; perhaps you want to import one of them
    |
32  + use anyhow::Context;
    |
32  + use quick_error::ResultExt;
    |
32  + use winnow::parser::Parser;
    |
help: there is a method `with_context` with a similar name
    |
930 |     let rt = tokio::runtime::Runtime::new().with_context("Failed to create tokio runtime")?;
    |                                             +++++

error[E0599]: no method named `context` found for enum `std::result::Result` in the current scope
   --> examples\hello_companion\src\main.rs:936:14
    |
933 |           let client = reqwest::Client::builder()
    |  ______________________-
934 | |             .timeout(std::time::Duration::from_secs(2))
935 | |             .build()
936 | |             .context("Failed to create HTTP client")?;
    | |_____________-^^^^^^^
    |
    = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `context` are implemented but not in scope; perhaps you want to import one of them
    |
32  + use anyhow::Context;
    |
32  + use quick_error::ResultExt;
    |
32  + use winnow::parser::Parser;
    |
help: there is a method `with_context` with a similar name
    |
936 |             .with_context("Failed to create HTTP client")?;
    |              +++++

For more information about this error, try `rustc --explain E0599`.
warning: `hello_companion` (bin "hello_companion") generated 11 warnings
error: could not compile `hello_companion` (bin "hello_companion") due to 3 previous errors; 11 warnings emitted
